[metadata]
name = colcon-distro
version = attr: colcon_distro.__version__
author = Mike Purvis
author_email = mpurvis@clearpath.ai
maintainer = Mike Purvis
maintainer_email = mpurvis@clearpath.ai
description = Distro management using colcon tools.
long_description = file: README.md
keywords = colcon

[options]
install_requires =
  aiosqlite
  colcon-common-extensions
  httpx==0.11.1  # version requirement via sanic
  requests
  sanic
  toml
packages =
  colcon_distro
  colcon_distro.vendor
zip_safe = true

[options.entry_points]
console_scripts =
    colcon_distro_cache = colcon_distro.cli:main
    colcon_distro_server = colcon_distro.server:main
colcon_core.verb =
    generate = colcon_distro.generate:GenerateVerb
    download = colcon_distro.download:DownloadVerb

[options.package_data]
* = *.sql

[flake8]
import-order-style = google
