[metadata]
name = colcon-distro
version = attr: colcon_distro.__version__
author = Mike Purvis
author_email = mpurvis@clearpath.ai
maintainer = Mike Purvis
maintainer_email = mpurvis@clearpath.ai
description = Distro management using colcon tools.
long_description = file: README.md
keywords = colcon
license = Apache License, Version 2.0
python_requires = '>=3.8'

[options]
install_requires =
  aiosqlite
  colcon-common-extensions
  httpx
  requests
  sanic>=21.3.2
  toml
packages =
  colcon_distro
  colcon_distro.vendor
  colcon_distro.verbs
zip_safe = true

[options.entry_points]
console_scripts =
    colcon_distro_cache = colcon_distro.cli:main
    colcon_distro_server = colcon_distro.server:main
colcon_core.verb =
    generate = colcon_distro.verbs.generate:GenerateVerb
    download = colcon_distro.verbs.download:DownloadVerb
colcon_core.extension_point =
    colcon_distro.repository_augmentation = colcon_distro.discovery:RepositoryAugmentationExtensionPoint

[options.package_data]
* = *.sql

[flake8]
import-order-style = google
max-line-length = 120
exclude = setup.py,vendor
ignore = D,W503

[coverage:run]
source = colcon_distro

[mypy]

[mypy-colcon_core.*,colcon_output.*,colcon_distro.vendor.*]
ignore_missing_imports = True
